[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/minigames/pressure/vehicle_underneath.png" type="Texture" id=1]
[ext_resource path="res://src/items/pressure/tire.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/minigames/pressure/vehicle_tires.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/latenight_font.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle" ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Vehicle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TireUL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, -5 ), Vector2( 1, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TireUR:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 55, -5 ), Vector2( 55, 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TireDL:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 43 ), Vector2( 1, 51 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TireDR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 55, 43 ), Vector2( 55, 51 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "hidden" ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TireUL:input_pickable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TireUR:input_pickable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TireDL:input_pickable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TireDR:input_pickable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "hidden"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="VehicleTires" type="Node2D"]
script = ExtResource( 3 )

[node name="Vehicle" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 6

[node name="TireUL" parent="." instance=ExtResource( 2 )]
position = Vector2( 1, 3 )

[node name="TireUR" parent="." instance=ExtResource( 2 )]
position = Vector2( 55, 3 )
scale = Vector2( -1, 1 )
id = 1

[node name="TireDL" parent="." instance=ExtResource( 2 )]
position = Vector2( 1, 51 )
id = 2

[node name="TireDR" parent="." instance=ExtResource( 2 )]
position = Vector2( 55, 51 )
scale = Vector2( -1, 1 )
id = 3

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "hidden"
anims/enter = SubResource( 1 )
anims/exit = SubResource( 2 )
anims/hidden = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Front" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 16.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "Front"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 6.0
margin_top = 33.0
margin_right = 10.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "L"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 46.0
margin_top = 33.0
margin_right = 51.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
